static/main.css
body,h1,h2,h3,h4,h5,h6 {font-family: NewsReader, sans-serif;}
/* Customised colors from w3.css framework */
.w3-theme-l5 {color:#000 !important; background-color:#fbeff1 !important}
.w3-theme-l4 {color:#000 !important; background-color:#f3cbd1 !important}
.w3-theme-l3 {color:#000 !important; background-color:#e796a2 !important}
.w3-theme-l2 {color:#fff !important; background-color:#db6274 !important}
.w3-theme-l1 {color:#fff !important; background-color:#ce2f47 !important}
.w3-theme-d1 {color:#fff !important; background-color:#8a1f2f !important}
.w3-theme-d2 {color:#fff !important; background-color:#7b1c2a !important}
.w3-theme-d3 {color:#fff !important; background-color:#6c1825 !important}
.w3-theme-d4 {color:#fff !important; background-color:#5c1520 !important}
.w3-theme-d5 {color:#fff !important; background-color:#4d111a !important}

.w3-theme-light {color:#000 !important; background-color:#fbeff1 !important}
.w3-theme-dark {color:#fff !important; background-color:#4d111a !important}
.w3-theme-action {color:#fff !important; background-color:#4d111a !important}

.w3-theme {color:#fff !important; background-color:#9b2335 !important}
.w3-text-theme {color:#9b2335 !important}
.w3-border-theme {border-color:#9b2335 !important}

.w3-hover-theme:hover {color:#fff !important; background-color:#9b2335 !important}
.w3-hover-text-theme:hover {color:#9b2335 !important}
.w3-hover-border-theme:hover {border-color:#9b2335 !important}




/* Header and Navbar */
header{
    background-color: #6c1825;
    color:white;
    position: sticky;
    top: 0;
    width: 100%;
    min-height: auto;
    z-index: 3;

}

.navbar{
    display: flex;
    justify-content: space-between;
    background-color: #6c1825;
    color:white;
    text-decoration: none;
    border: none;
    
}


.w3-dropdown-content {
    cursor: auto;
    color: white;
    background-color: #6c1825;
    display: none;
    position: absolute;
    min-width: 160px;
    margin: 0;
    padding: 0;
    
}


.w3-button:hover{
    color:white!important;
    background-color:#8a1f2f!important
}

.w3-dropdown-hover:hover > .w3-button:first-child,.w3-dropdown-click:hover > .w3-button:first-child{
    background-color:#8a1f2f;
    color:white
}


.w3-container {
    display: flex;
    justify-content: space-between;
    padding: 10px 10px 10px 10px;
  

}

.w3-input{
    margin-top: 20px;
    width: 50%;
    height: 10%;
}

.material-symbols-outlined{
    margin-top: 20px;
    
}

/* Products page */

.three-column{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 2em;
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
    align-items: center;
    
}

.w3-card-4{
    width: 500px;
    height: fit-content;
    

}
.product_name{
    font-size: 20px;
    text-decoration: none;
    padding-bottom: 10px;   
    padding-right: 10px;
    text-align: center; 
    
  
}

/* All images */
img{
    width: 100%;
    
    
    
}

/* Home page */
.product-header{
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
}

.cart-link{
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
    text-decoration: none;
}

.w3-image{
    width: 2000px;
    height: 600px;
    object-fit: cover;
    pointer-events: none;    
}

.w3-display-bottomleft{    
    pointer-events: none;
    font-size: 100px;
    color: white;
}

.w3-display-container{  
    z-index: 1;
    position: relative;
    pointer-events: none;
    width: 2000px;
}

.image-container{
    width: 500px;
    height: 400px;
    overflow: hidden;

}

.image-container img {
    width: 100%;
    height: 100%;
    object-fit: contain;
   
}

/* About Page */
.about-header{
    padding: 10px 10px 10px 10px;
    text-align: center;    
    font-size: 50px;  
    

}

.about-container1{
    display: flex;
    justify-content: left;
    flex-direction: row;
    align-items: center;

}

.about-container2{
    display: flex;
    justify-content: left;
    flex-direction: row;
    align-items: center;

}
.about-image{
    height: 500px;
    padding: 10px 10px 10px 10px;   
    margin: 10px 10px 10px 10px;
    padding-right: 20px;
    margin-right: 20px;
}

.mission-heading{  
    font-size: 40px;

}

.text-container{   
    display: flex;
    flex-direction: column;
    margin: 10px 10px 10px 10px;
    padding: 10px 10px 10px 10px;
}

/* Individual Products page */

.two-column{
    display: flex;
    flex-direction: row;
    justify-content: left;
}

.individ_image{  
    margin: 10px 10px 10px 10px;
    padding: 10px 10px 10px 10px;
}

.info{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.individ_product-name{
    font-size: 20px;
    text-decoration: none;
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
    text-align: left; 
}

.individ_product-container{
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
}

/* Cart page */
.cart-heading{
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
    
}

.cart_items{
    display: flex;
    flex-direction: row;
    justify-content: left;
}

.cart-container{
    display: flex;
    flex-direction: column;
    justify-content: left;
}

.empty{
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
    font-size: 20px;
}

.cart-image{
    width:100px;
    height: auto;
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
   
}

.cart-item-info{
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
    text-align: center;
}

.cart-button{
    text-align: center;
    width: 200px;
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
    height: 40px;
}

/* Search bar */
.search{
    width: 700px;
    height:30px;
}

/* Thank you Page */
.heading{
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
    text-align: center;

}

.container{
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 30px;
  
}

.card{
    display: flex;
    flex-direction: column;
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
    align-items: center;
}




/* Payment Page */
.total_price{
    padding: 10px 10px 10px 10px;
    margin: 10px 10px 10px 10px;
}

/* Filter Button */
.filter-button{
    margin-top:0px;
    margin-left:10px;
    padding: 10px 10px 10px 10px;
}

